{
  "version": 4,
  "terraform_version": "1.4.4",
  "serial": 39,
  "lineage": "e972b720-d02d-cb37-e8c1-61446ee123d8",
  "resources": [
    {
      "mode": "data",
      "type": "aws_vpc",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:660656678331:vpc/vpc-0cfc611bed500483e",
            "cidr_block": "10.0.0.0/16",
            "cidr_block_associations": [
              {
                "association_id": "vpc-cidr-assoc-0eefa8a6d0fdc95e4",
                "cidr_block": "10.0.0.0/16",
                "state": "associated"
              }
            ],
            "default": false,
            "dhcp_options_id": "dopt-0fa8e559e94977f45",
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "id": "vpc-0cfc611bed500483e",
            "instance_tenancy": "default",
            "main_route_table_id": "rtb-0466768244df00267",
            "owner_id": "660656678331",
            "state": "available",
            "tags": {
              "Name": "test_ecs_provisioning",
              "createdBy": "binpipe",
              "env": "dev"
            }
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb",
      "name": "test-lb",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "enabled": false
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:us-east-1:660656678331:loadbalancer/app/test-ecs-lb/4d02b15d3c7ef121",
            "arn_suffix": "app/test-ecs-lb/4d02b15d3c7ef121",
            "dns_name": "test-ecs-lb-2075626373.us-east-1.elb.amazonaws.com",
            "drop_invalid_header_fields": false,
            "enable_cross_zone_load_balancing": true,
            "enable_deletion_protection": false,
            "enable_http2": true,
            "id": "arn:aws:elasticloadbalancing:us-east-1:660656678331:loadbalancer/app/test-ecs-lb/4d02b15d3c7ef121",
            "idle_timeout": 60,
            "internal": false,
            "ip_address_type": "ipv4",
            "load_balancer_type": "application",
            "name": "test-ecs-lb",
            "security_groups": [
              "sg-08c1fe9594c4e4b8a"
            ],
            "subnet_mapping": [
              {
                "subnet_id": "subnet-043304f3fbdee6494"
              },
              {
                "subnet_id": "subnet-0d1d2e4343b540d67"
              },
              {
                "subnet_id": "subnet-0ed3b357dbeae1169"
              }
            ],
            "subnets": [
              "subnet-043304f3fbdee6494",
              "subnet-0d1d2e4343b540d67",
              "subnet-0ed3b357dbeae1169"
            ],
            "tags": {
              "env": "dev"
            },
            "vpc_id": "vpc-0cfc611bed500483e",
            "zone_id": "Z35SXDOTRQ7X7K"
          },
          "dependencies": [
            "aws_security_group.lb",
            "data.aws_vpc.main",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "web-listener",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:us-east-1:660656678331:listener/app/test-ecs-lb/4d02b15d3c7ef121/6de106db4f1cca63",
            "certificate_arn": null,
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:us-east-1:660656678331:targetgroup/ecstask-target-group/253a3015b36e184f",
                "type": "forward"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:660656678331:listener/app/test-ecs-lb/4d02b15d3c7ef121/6de106db4f1cca63",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:us-east-1:660656678331:loadbalancer/app/test-ecs-lb/4d02b15d3c7ef121",
            "port": 80,
            "protocol": "HTTP",
            "ssl_policy": "",
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_lb.test-lb",
            "aws_lb_target_group.lb_target_group",
            "aws_security_group.lb",
            "data.aws_vpc.main",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "lb_target_group",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:us-east-1:660656678331:targetgroup/ecstask-target-group/253a3015b36e184f",
            "arn_suffix": "targetgroup/ecstask-target-group/253a3015b36e184f",
            "deregistration_delay": 300,
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 2,
                "interval": 300,
                "matcher": "200,301,302",
                "path": "/",
                "port": "traffic-port",
                "protocol": "HTTP",
                "timeout": 60,
                "unhealthy_threshold": 10
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:660656678331:targetgroup/ecstask-target-group/253a3015b36e184f",
            "lambda_multi_value_headers_enabled": false,
            "load_balancing_algorithm_type": "round_robin",
            "name": "ecstask-target-group",
            "port": 80,
            "protocol": "HTTP",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "target_type": "instance",
            "vpc_id": "vpc-0cfc611bed500483e"
          },
          "dependencies": [
            "data.aws_vpc.main",
            "module.vpc.aws_vpc.this"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "ec2-sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:660656678331:security-group/sg-08ef7e982108ca114",
            "description": "allow all",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-08ef7e982108ca114",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "name": "allow-all-ec2",
            "name_prefix": null,
            "owner_id": "660656678331",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "ecstask"
            },
            "timeouts": null,
            "vpc_id": "vpc-0cfc611bed500483e"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "data.aws_vpc.main",
            "module.vpc.aws_vpc.this"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "lb",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:660656678331:security-group/sg-08c1fe9594c4e4b8a",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-08c1fe9594c4e4b8a",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "name": "allow-all-lb",
            "name_prefix": null,
            "owner_id": "660656678331",
            "revoke_rules_on_delete": false,
            "tags": {
              "env": "dev"
            },
            "timeouts": null,
            "vpc_id": "vpc-0cfc611bed500483e"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "data.aws_vpc.main",
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:660656678331:internet-gateway/igw-0d667d5c9da58258c",
            "id": "igw-0d667d5c9da58258c",
            "owner_id": "660656678331",
            "tags": {
              "Name": "test_ecs_provisioning",
              "createdBy": "binpipe",
              "env": "dev"
            },
            "vpc_id": "vpc-0cfc611bed500483e"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route",
      "name": "public_internet_gateway",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "igw-0d667d5c9da58258c",
            "id": "r-rtb-05d50d6beb533cdb41080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-05d50d6beb533cdb4",
            "state": "active",
            "timeouts": {
              "create": "5m",
              "delete": null
            },
            "transit_gateway_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_internet_gateway.this",
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtb-05d50d6beb533cdb4",
            "owner_id": "660656678331",
            "propagating_vgws": [],
            "route": [
              {
                "cidr_block": "0.0.0.0/0",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0d667d5c9da58258c",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "test_ecs_provisioning-public",
              "createdBy": "binpipe",
              "env": "dev"
            },
            "vpc_id": "vpc-0cfc611bed500483e"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-09e1eaa5e5ac700c4",
            "route_table_id": "rtb-05d50d6beb533cdb4",
            "subnet_id": "subnet-0ed3b357dbeae1169"
          },
          "dependencies": [
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0481868cf2ff39b05",
            "route_table_id": "rtb-05d50d6beb533cdb4",
            "subnet_id": "subnet-043304f3fbdee6494"
          },
          "dependencies": [
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-02f09703df74befb8",
            "route_table_id": "rtb-05d50d6beb533cdb4",
            "subnet_id": "subnet-0d1d2e4343b540d67"
          },
          "dependencies": [
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:660656678331:subnet/subnet-0ed3b357dbeae1169",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az6",
            "cidr_block": "10.0.1.0/24",
            "id": "subnet-0ed3b357dbeae1169",
            "map_public_ip_on_launch": true,
            "owner_id": "660656678331",
            "tags": {
              "Name": "test_ecs_provisioning-public-us-east-1a",
              "createdBy": "binpipe",
              "env": "dev"
            },
            "vpc_id": "vpc-0cfc611bed500483e"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:660656678331:subnet/subnet-043304f3fbdee6494",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.0.2.0/24",
            "id": "subnet-043304f3fbdee6494",
            "map_public_ip_on_launch": true,
            "owner_id": "660656678331",
            "tags": {
              "Name": "test_ecs_provisioning-public-us-east-1b",
              "createdBy": "binpipe",
              "env": "dev"
            },
            "vpc_id": "vpc-0cfc611bed500483e"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": 2,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:660656678331:subnet/subnet-0d1d2e4343b540d67",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1c",
            "availability_zone_id": "use1-az2",
            "cidr_block": "10.0.3.0/24",
            "id": "subnet-0d1d2e4343b540d67",
            "map_public_ip_on_launch": true,
            "owner_id": "660656678331",
            "tags": {
              "Name": "test_ecs_provisioning-public-us-east-1c",
              "createdBy": "binpipe",
              "env": "dev"
            },
            "vpc_id": "vpc-0cfc611bed500483e"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:660656678331:vpc/vpc-0cfc611bed500483e",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-0f19f2963d228a801",
            "default_route_table_id": "rtb-0466768244df00267",
            "default_security_group_id": "sg-0a54cc26355521dd6",
            "dhcp_options_id": "dopt-0fa8e559e94977f45",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "id": "vpc-0cfc611bed500483e",
            "instance_tenancy": "default",
            "main_route_table_id": "rtb-0466768244df00267",
            "owner_id": "660656678331",
            "tags": {
              "Name": "test_ecs_provisioning",
              "createdBy": "binpipe",
              "env": "dev"
            }
          },
          "create_before_destroy": true
        }
      ]
    }
  ]
}